# valund

./: README.md  docker-compose.yml  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: frontend-tests.yml
backend/: .coverage  .coveragerc  .env.example  .gitignore  Dockerfile  coverage.xml  manage.py  pytest.ini  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/bookings/: admin.py  models.py  tests.py  urls.py  views.py
backend/bookings/migrations/: 0001_initial.py
backend/competence/: admin.py  models.py  urls.py  views.py
backend/competence/migrations/: 0001_initial.py
backend/contracts/: admin.py  apps.py  models.py  services.py  signals.py
backend/contracts/migrations/: 0001_initial.py
backend/identity/: apps.py  models.py  services.py  tests.py  tests_metrics.py  urls.py  utils.py  views.py
backend/identity/migrations/: 0001_initial.py
backend/payments/: admin.py  models.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/ratings/: admin.py  models.py  urls.py  views.py
backend/ratings/migrations/: 0001_initial.py
backend/search/: admin.py  models.py  tests.py  urls.py  views.py
backend/search/migrations/: 0001_initial.py
backend/tests/: __init__.py  conftest.py  factories.py  test_accounts.py  test_bookings.py  test_competence.py  test_contracts.py  test_coverage_thresholds.py  test_integration_flow.py  test_payments.py  test_ratings.py  test_search.py  test_urls_and_search.py
backend/valund/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
docker/postgres/: init.sql
docs/: IMPLEMENTATION.md
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/.github/workflows/: frontend-tests.yml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: smoke.test.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/app/: index.ts
frontend/src/app/layouts/: DashboardLayout.tsx  Footer.tsx  Header.tsx  Layout.tsx
frontend/src/app/outlet/Dashboard/: Dashboard.tsx
frontend/src/app/pages/: About.tsx  Contact.tsx  Dashboard.tsx  FindTalent.tsx  Professionals.tsx  home.tsx
frontend/src/app/pages/home/: home.tsx
frontend/src/app/providers/: AuthProvider.tsx
frontend/src/assets/styles/: index.css
frontend/src/features/accounts/: AuthContext.tsx  ErrorBoundary.tsx  client.ts  index.ts
frontend/src/features/accounts/components/: LoginForm.tsx  RegisterForm.tsx
frontend/src/features/accounts/hooks/: UseAuth.ts
frontend/src/features/accounts/pages/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/accounts/services/: AuthProvider.tsx  geographicService.ts
frontend/src/features/accounts/types/: auth.ts  index.ts
frontend/src/features/bookings/: index.ts
frontend/src/features/competence/: index.ts
frontend/src/features/contracts/: index.ts
frontend/src/features/identity/: index.ts
frontend/src/features/payments/: index.ts
frontend/src/features/ratings/: index.ts
frontend/src/features/search/: index.ts
frontend/src/shared/: index.ts
frontend/src/shared/components/: ProtectedRoute.tsx  index.ts
frontend/src/shared/components/layout/: Layout.tsx
frontend/src/shared/components/ui/: Button.tsx  Card.tsx  CookieConsent.tsx  Input.tsx  LoadSpinner.tsx
frontend/src/shared/hooks/: UseAuth.ts  useAuth.ts
frontend/src/shared/utils/: cn.ts
monitoring/: prometheus.yml
nginx/: default.conf  nginx.conf
scripts/: health-check.sh  setup.sh
